--- a/package.json
+++ b/package.json
@@ -1,15 +1,52 @@
 {
-  "name": "svg-to-react-converter",
-  "version": "1.0.0",
-  "description": "",
-  "main": "indent.js",
+  "name": "svg-react",
+  "version": "0.1.1-alpha.0",
+  "description": "Converts SVG XML code to be used as a ReactJS component.",
+  "main": "converter/index.js",
   "scripts": {
-    "doc": "jsdoc -c jsdoc.json"
+    "compile": "npx babel src --out-dir lib",
+    "doc": "jsdoc -c jsdoc.json",
+    "build": "webpack --watch",
+    "client": "webpack-dev-server --mode development --open --hot",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {},
+  "author": "Brad Vanderbush <b.vanderbush@icloud.com>",
+  "license": "MIT",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.1.3"
+  },
   "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
+    "@babel/plugin-transform-runtime": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "concurrently": "^5.1.0",
+    "css-loader": "^4.0.0",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.2.0",
+    "json-loader": "^0.5.7",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.14.0",
+    "nodemon": "^2.0.3",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
+    "webpack-merge": "^4.2.2",
     "jsdoc": "^3.6.4"
   }
 }
