Browser and Common js working

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Brad Vanderbush <b.vanderbush@icloud.com>",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.20.0",
     "dotenv": "^8.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
