--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
   "author": "Brad Vanderbush <b.vanderbush@icloud.com>",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.20.0",
-    "dotenv": "^8.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -33,10 +31,10 @@
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "clean-webpack-plugin": "^3.0.0",
-    "concurrently": "^5.1.0",
     "css-loader": "^4.0.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.2.0",
+    "jsdoc": "^3.6.4",
     "json-loader": "^0.5.7",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.0",
@@ -46,7 +44,6 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
-    "webpack-merge": "^4.2.2",
-    "jsdoc": "^3.6.4"
+    "webpack-merge": "^4.2.2"
   }
 }
