--- a/package.json
+++ b/package.json
@@ -3,6 +3,17 @@
   "version": "0.1.1-alpha.0",
   "description": "Converts SVG XML code to be used as a ReactJS component.",
   "main": "converter/index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bradicalone/svg-react-converter.git"
+  },
+  "keywords": [
+    "Javascript",
+    "React",
+    "SVG",
+    "JSX",
+    "NodeJS"
+  ],
   "scripts": {
     "doc": "jsdoc -c jsdoc.json",
     "build": "webpack --watch",
