--- a/package.json
+++ b/package.json
@@ -19,17 +19,19 @@
     "build:dev": "webpack --watch",
     "start:dev": "webpack-dev-server --mode development --open --hot",
     "dev": "(npm run build:dev & npm run start:dev) || (start npm run build:dev && start npm run start:dev)",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Brad Vanderbush <b.vanderbush@icloud.com>",
   "license": "MIT",
   "dependencies": {
+    "jest": "^26.4.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "save-dev": "0.0.1-security"
   },
   "optionalDependencies": {
     "fsevents": "^2.1.3"
