--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "svg-react",
+  "name": "convert-svg-react",
   "version": "0.1.1-alpha.0",
   "description": "Converts SVG XML code to be used as a ReactJS component.",
   "main": "converter/index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bradicalone/svg-react.git"
+    "url": "git+https://github.com/bradicalone/svg-react"
   },
   "keywords": [
     "Javascript",
@@ -26,12 +26,7 @@
   "dependencies": {
     "jest": "^26.4.2",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.1.2",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "save-dev": "0.0.1-security"
+    "react-dom": "^16.13.1"
   },
   "optionalDependencies": {
     "fsevents": "^2.1.3"
@@ -49,7 +44,6 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.2.0",
     "jsdoc": "^3.6.4",
-    "json-loader": "^0.5.7",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.0",
     "nodemon": "^2.0.3",
@@ -57,7 +51,6 @@
     "style-loader": "^1.2.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
-    "webpack-merge": "^4.2.2"
+    "webpack-dev-server": "^3.10.3"
   }
 }
