--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "convert-svg-react",
   "version": "0.1.1-alpha.1",
-  "description": "Converts SVG XML code to be used as a ReactJS component.",
+  "description": "Converts SVG XML code to be used as ReactJS component.",
   "main": "converter/index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bradicalone/svg-react"
+    "url": "git+https://github.com/bradicalone/convert-svg-react"
   },
   "keywords": [
     "Javascript",
     "React",
     "SVG",
     "JSX",
-    "NodeJS"
+    "NodeJS",
+    "svg"
   ],
   "scripts": {
     "doc": "jsdoc -c jsdoc.json",
@@ -24,7 +25,6 @@
   "author": "Brad Vanderbush <b.vanderbush@icloud.com>",
   "license": "MIT",
   "dependencies": {
-    "jest": "^26.4.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
@@ -42,7 +42,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.0.0",
     "file-loader": "^6.0.0",
-    "html-webpack-plugin": "^4.2.0",
+    "jest": "^26.4.2",
     "jsdoc": "^3.6.4",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.0",
