--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "convert-svg-react",
-  "version": "0.1.1-alpha.1",
+  "version": "0.1.1-alpha.2",
   "description": "Converts SVG XML code to be used as ReactJS component.",
   "main": "converter/index.js",
   "repository": {
@@ -16,6 +16,7 @@
     "svg"
   ],
   "scripts": {
+    "compile": "npx babel src converter --out-dir lib",
     "doc": "jsdoc -c jsdoc.json",
     "build:dev": "webpack --watch",
     "start:dev": "webpack-dev-server --mode development --open --hot",
@@ -32,6 +33,7 @@
     "fsevents": "^2.1.3"
   },
   "devDependencies": {
+    "@babel/cli": "^7.11.6",
     "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
     "@babel/plugin-transform-runtime": "^7.9.0",
@@ -52,5 +54,10 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
