--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "convert-svg-react",
-  "version": "1.0.0-alpha.beta",
+  "version": "1.0.0-beta",
   "description": "Converts SVG XML code to be used as ReactJS component.",
   "main": "lib/converter/index.js",
   "repository": {
@@ -26,6 +26,7 @@
   "author": "Brad Vanderbush <b.vanderbush@icloud.com>",
   "license": "MIT",
   "dependencies": {
+    "install": "^0.13.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
@@ -44,12 +45,13 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.0.0",
     "file-loader": "^6.0.0",
-    "jest": "^26.4.2",
+    "jest": "^26.6.1",
     "jsdoc": "^3.6.4",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.0",
     "nodemon": "^2.0.3",
-    "sass-loader": "^8.0.2",
+    "sass": "^1.28.0",
+    "sass-loader": "^10.0.4",
     "style-loader": "^1.2.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
