--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "convert-svg-react",
-  "version": "1.0.0-beta",
+  "version": "1.0.0-beta.1",
   "description": "Converts SVG XML code to be used as ReactJS component.",
   "main": "lib/converter/index.js",
   "repository": {
