--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "convert-svg-react",
-  "version": "1.0.0-beta.8",
+  "version": "1.0.0",
   "description": "Converts SVG XML code to be used as ReactJS component.",
   "main": "lib/converter/index.js",
   "repository": {
@@ -49,7 +49,7 @@
     "jest": "^26.6.1",
     "jsdoc": "^3.6.4",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.14.0",
+    "node-sass": "^6.0.0",
     "nodemon": "^2.0.3",
     "sass": "^1.28.0",
     "sass-loader": "^10.0.4",
